# DRF-Pagination-Exercise

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/management/commands/: create_post.py
drf_exercise/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: nginx.conf
tests/: test_first.py  test_models.py
