[tool.poetry]
name = "html"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django-rest-framework = "^0.1.0"
psycopg2 = "^2.9.5"
pillow = "^9.4.0"
pytest = "^7.2.2"
pytest-django = "^4.5.2"
pytest-drf = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
